--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <router-view ></router-view>
     </div>
     <!-- built files will be auto injected -->
+    <!-- 引入组件库 -->
   </body>
 </html>
